Fix blog post images stretching on Safari and iOS

--- a/website/src/framework/text/rich-text.component.scss
+++ b/website/src/framework/text/rich-text.component.scss
@@ -77,13 +77,13 @@
         align-items: center;
         text-align: center;
         width: 100%;
+        max-width: var(--section-max-width);
 
         img {
             display: block;
             border-radius: var(--border-radius);
             border: 1px solid var(--content-border-color);
-            max-width: 100%;
-            height: 100%;
+            max-width: var(--section-max-width);
         }
 
         figcaption {
